--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fem-myteam-multi-page-website",
+  "homepage": "https://mgrevious.github.io/fem-myteam-multi-page-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +8,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "immer": "^10.0.3",
-    "postcss-nesting": "^12.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1"
